tests/integration/tests/di/ui/fail/missing_clone_trait.stderr
error[E0277]: the trait bound `ServiceWithoutClone: Clone` is not satisfied
  --> tests/di/macro_compile_tests/fail/missing_clone_trait.rs:18:25
   |
18 |     let _arc = wrap_in_arc(service);
   |                ----------- ^^^^^^^ the trait `Clone` is not implemented for `ServiceWithoutClone`
   |                |
   |                required by a bound introduced by this call
   |
note: required by a bound in `wrap_in_arc`
  --> tests/di/macro_compile_tests/fail/missing_clone_trait.rs:9:19
   |
 9 | fn wrap_in_arc<T: Clone>(value: T) -> Arc<T> {
   |                   ^^^^^ required by this bound in `wrap_in_arc`
help: consider annotating `ServiceWithoutClone` with `#[derive(Clone)]`
   |
 4 + #[derive(Clone)]
 5 | struct ServiceWithoutClone {
   |
